<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">VeriKlick</string>
    <string name="firebaseNotificationTopic" tools:ignore="MissingTranslation">globalNotification</string>
    <string name="hint_email">Email</string>
    <string name="hint_submit">Submit</string>
    <string name="hint_password">Password</string>
    <string name="txt_emptyPassword">Field can not be empty</string>
    <string name="txt_weakPassword">weak password</string>
    <string name="txt_password_must_be_greaterthan_6"><![CDATA[Password must be >6]]></string>
    <string name="txt_required">Required</string>
    <string name="txt_enter_valid_email">Please enter valid email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_connect">Connect</string>
    <string name="room_status">status</string>
    <string name="room_screen_select_device">Select Device</string>
    <string name="txt_Continue_as_a_Guest">Continue as a Guest</string>
    <string name="chat_token_url">https://YOUR_DOMAIN_HERE.twil.io/chat-token</string>
    <string name="error_retrieving_access_token">Error retrieving access token from the server.</string>
    <string name="txt_chat">chat</string>
    <string name="txt_type_here">Type here…</string>
    <string name="txt_view_document">View Document</string>
    <string name="txt_login">Login</string>
    <string name="txt_start_join_video_meeting_on_the_go">Start or join a video meeting on the go</string>
    <string name="txt_forgot_password_with_question">Forgot Password?</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_join_meeting">Join Meeting</string>
    <string name="txt_enter_code">Enter a code or link</string>
    <string name="txt_join">Join</string>
    <string name="txt_mute">Mute</string>
    <string name="txt_unmute">Unmute</string>
    <string name="txt_client">Client : &#160;</string>
    <string name="txt_candidate">Candidate</string>
    <string name="txt_Upcoming_Meetings">Meetings</string>
    <string name="txt_permission_required">Camera and Mic permission Required</string>
    <string name="txt_email">Email</string>
    <string name="txt_description_Forgot_password">Enter the email address used to log in to VeriKlick and then click on the  Forgot Password button below to receive an email from VeriKlick with instructions on how to reset your password</string>
    <string name="txt_wrong_credentials">Wrong Credentials</string>
    <string name="txt_email_not_registerd_with_us">This email is not registered</string>
    <string name="txt_failed_to_process_try_again">Failed to process . Please try again.</string>
    <string name="txt_no_internet_connection">No internet connection</string>
    <string name="txt_no_meetings">No Meetings</string>
    <string name="txt_not_host_alert">Host has not started meeting! Please wait or click Join Again to check if the host started this meeting.</string>
    <string name="txt_url_required">Url Required!</string>
    <string name="txt_join_again">Join Again</string>
    <string name="txt_allow_to_mute">Allow To Mute</string>
    <string name="txt_mute_note_allowed">Mute not allowed by Host</string>
    <string name="hint_phone_no">Phone no.</string>
    <string name="txt_send">Send</string>
    <string name="txt_member">Member</string>
    <string name="txt_add_interviewer">+ Add Interviewer</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="txt_all_fields_required">All Fields Are Required</string>
    <string name="txt_resume">Resume</string>
    <string name="txt_something_went_wrong">Something went wrong</string>
    <string name="txt_something_went_wrong_rejoin_meeting">Something went wrong.Please rejoin the meeting.</string>
    <string name="txt_invite">Invite</string>
    <string name="txt_Invitation_sent">Invitation Sent!</string>
    <string name="txt_failed_to_Invitation">Failed to send invitation</string>
    <string name="txt_email_already_exists">Participant already exists with this email.</string>
    <string name="txt_phone_already_exists">Participant already exists with this contact number.</string>
    <string name="txt_permissionScreenSharingGranted">Screen sharing permission Granted</string>
    <string name="txt_permissionScreenSharingNotGranted">Screen sharing permission not granted</string>
    <string name="txt_screen_sharing_error">failed to Share Screen</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_description">Description</string>
    <string name="txt_Candidate_Skills">Candidate Skills</string>
    <string name="txt_wireFraming">Wireframing</string>
    <string name="txt_txt_shareYourCommentHere">Please share your documents here!</string>
    <string name="txt_comment">Comment</string>
    <string name="txt_userTesting">User testing</string>
    <string name="txt_ui_design">UI design</string>
    <string name="txt_responsive_web_design">Responsive Web Design</string>
    <string name="txt_recommendation">Recommendation</string>
    <string name="txt_variation_of_passages">Variations of passages</string>
    <string name="txt_remark">Remark</string>
    <string name="txt_overall_remarks">Overall Remarks</string>
    <string name="txt_panel_member">Panel Member</string>
    <string name="txt_name">Name</string>
    <string name="txt_role">Role</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_jobId">Job ID : &#160;</string>
    <string name="txt_search">Search…</string>
    <string name="txt_title">Title</string>
    <string name="txt_screen_sharing_started">Screen Sharing Started</string>
    <string name="txt_screen_sharing_stopped">Screen Sharing Stopped</string>
    <string name="txt_interviewer_name">Interviewer Name</string>
    <string name="txt_addMore"> <u>+Add more</u></string>
    <string name="txt_no_supported_app_to_open">No supported App to Open File</string>
    <string name="txt_login_with_otp">Login with OTP</string>
    <string name="txt_send_otp">Send OTP</string>
    <string name="txt_six_digit_otp">Enter 6 digits OTP</string>
    <string name="txt_verify_otp">Verify OTP</string>
    <string name="txt_otp_descrition">OTP (one-time password) will be sent to your registered email.</string>
    <string name="txt_cant_add_more_participant">Can\'t add more participant</string>
    <string name="txt_do_you_want_to_logout">Do you want to logout?</string>
    <string name="txt_only_one_person_can_share_screen">only one person can share screen at a time</string>
    <string name="txt_do_you_want_to_exit_the_meeting">Are you sure to leave the meeting?</string>
    <string name="txt_id">ID</string>
    <string name="txt_job_des">Job Description:</string>
    <string name="txt_resend_otp">Resend OTP</string>
    <string name="txt_addparticipant">Add \\ Remove Participant</string>
    <string name="txt_screensharing">Screen Share</string>
    <string name="txt_recording">Recording</string>
    <string name="txt_please_try_again">Please try again</string>
    <string name="txt_select_recommendation">Select Recommendation</string>
    <string name="txt_coding_test_remark">Coding Test Remark</string>
    <string name="txt_Resume_not_available">Resume Not Available</string>
    <string name="txt_all_meetings">All Meetings</string>
    <string name="txt_scheduled">Scheduled</string>
    <string name="txt_cancelled">Cancelled</string>
    <string name="txt_missed">Missed</string>
    <string name="txt_attended">Attended</string>
    <string name="txt_scheduled_meetings">Scheduled Meetings</string>
    <string name="txt_canceled_meetings">Cancelled Meetings</string>
    <string name="txt_missed_meetings">Missed Meetings</string>
    <string name="txt_attended_meetings">Attended Meetings</string>
    <string name="txt_sharingscreenstatus">You\'re sharing your screen to everyone</string>
    <string name="txt_video_not_available">Video Not Available</string>
    <string name="txt_add_member">Add Members</string>
    <string name="txt_you_are_not_authorized_to_record_video">you are not authorized to record video</string>
    <string name="txt_stop_screensharing">Stop Screen Share</string>
    <string name="txt_privacy_policy_underline" tools:ignore="ExtraTranslation"><u>politique de confidentialité</u>  </string>
    <string name="txt_privacy_policy"><u>Privacy Policy</u></string>
    <string name="txt_term_and_condition_underline"><u>Terms and Conditions</u></string>
    <string name="txt_term_and_condition">Terms and Conditions</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_agree">Agree</string>
    <string name="txt_call_in_progress">Call in Progress</string>
    <string name="txt_please_enter_valid_info">Please enter valid information</string>
    <string name="txt_do_you_want_to_cancel_meeting">Do you want to cancel the meeting?</string>
    <string name="txt_yes">Yes</string>
    <string name="txt_update">Update</string>
    <string name="txt_data_already_exists">Data already exists</string>
    <string name="txt_recommendation_required">Recommendation field required!</string>
    <string name="txt_meeting_already_running">Meeting is Already Running</string>
    <string name="txt_join_anyway">Join anyway?</string>
    <string name="txt_close_the_meeting">Close the meeting</string>
    <string name="txt_press_back_again_to_exit">Press again to exit</string>
    <string name="txt_create_candidate">Create Candidate</string>
    <string name="txt_version">App Version</string>
    <string name="txt_app_version">App Version</string>
    <string name="txt_logout">Log Out</string>
    <string name="txt_upload_profile_photo">Upload a profile photo</string>
    <string name="txt_tap_to_upload_your_picture">Tap upload your picture here or click on upload</string>
    <string name="txt_upload">Upload</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="zero_time">00:00</string>
    <string name="txt_record_your_voice">Record your voice</string>
    <string name="txt_internal_id">Internal ID</string>
    <string name="txt_created_on">Created on</string>
    <string name="txt_created_by">Created by</string>
    <string name="txt_last_update_on">Last update on</string>
    <string name="txt_last_update_by">Last update by</string>
    <string name="txt_call">Call</string>
    <string name="txt_sms">Sms</string>
    <string name="txt_image_not_available">Image not available</string>
    <string name="txt_profile_details">Profile Details</string>
    <string name="txt_professional_details">Professional Details</string>
    <string name="txt_next">Next</string>
    <string name="txt_phoneNo">Phone no.</string>
    <string name="txt_primaryNumber">Primary Number</string>
    <string name="txt_code">Code</string>
    <string name="txt_four_digit_ssn">Last 4 Digit Of SSN</string>
    <string name="txt_all_quesiton_required">All question required</string>
    <string name="txt_please_select_photo_first">Please select photo first</string>
    <string name="txt_candidate_list">Candidate List</string>
    <string name="txt_createProfile">Create Profile</string>
    <string name="txt_invalid_or_blank_data">Invalid or blank data</string>
    <string name="txt_sendLink">Send Link</string>
    <string name="txt_list_candidate">List Candidate</string>
    <string name="txt_ok">OK</string>
    <string name="txt_teams_meeting">Teams Meeting</string>
    <string name="txt_candidate_Not_Joined_Yet">Candidate Not Joined Yet</string>
    <string name="txt_open_again">Open Again</string>
    <string name="txt_firstName">First name</string>
    <string name="txt_lastName">Last name</string>
    <string name="txt_meetings">Meetings</string>
</resources>