<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sp"
        >

        <View
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/ic_arrow_back_24"
            android:id="@+id/btn_jump_back"
            />


        <TextView
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_forgot_password"
            style="@style/textview.Style.TvStyleWhiteRounded_30"
            android:text="@string/txt_forgot_password_with_question"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_txt_start_meeting"
            style="@style/textview.Style.WhiteRounded_18"
            android:text="@string/txt_description_Forgot_password"
            />




        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_forgotPassword"
            android:hint="@string/txt_email"
            style="@style/editext.style.base"
            android:layout_marginTop="@dimen/_15sp"
            android:textSize="@dimen/_18sdp"
            android:maxLines="1"
            android:drawableLeft="@drawable/ic_img_message_black"
            android:layout_marginHorizontal="@dimen/_10sp"
            android:layout_marginBottom="@dimen/_5sp"
            />

        <TextView
            android:id="@+id/tv_email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sp"
            android:fontFamily="@font/sarabun_medium"
            android:gravity="right"
            android:text="hellowfoisjd"
            android:textColor="@color/red"
            android:textSize="@dimen/_12sp"
            android:visibility="invisible" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_forgot_password"
            android:layout_marginTop="@dimen/_5sp"
            android:text="@string/txt_forgot_password"
            style="@style/button.Style.Blue.Rounded"
            />

    </LinearLayout>
</ScrollView>
</layout>