<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_rectangle_rounded_10_white"
        android:padding="@dimen/_10sp"
        >
        <ImageView
            android:layout_width="@dimen/_20sp"
            android:layout_height="@dimen/_20sp"
            android:src="@drawable/ic_cross"
            android:id="@+id/btn_cross"
            android:padding="@dimen/_3sdp"
            android:elevation="@dimen/_5sp"
            android:layout_gravity="end"
            />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="350dp"
        android:background="@drawable/shape_rectangle_rounded_10_white"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10sp"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="start"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_internal_id"
                android:fontFamily="@font/sarabun_regular" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_created_on"
                android:fontFamily="@font/sarabun_regular" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_created_by"
                android:fontFamily="@font/sarabun_regular" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_last_update_on"
                android:fontFamily="@font/sarabun_regular" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_last_update_by"
                android:fontFamily="@font/sarabun_regular" />



        </androidx.appcompat.widget.LinearLayoutCompat>

        <Space
            android:layout_width="@dimen/_10sp"
            android:layout_height="match_parent"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:id="@+id/tv_internalId"
                android:textSize="@dimen/_14sp"
                android:fontFamily="@font/sarabun_regular"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"

                android:id="@+id/tv_createdOn"
                android:textSize="@dimen/_14sp"
                android:fontFamily="@font/sarabun_regular"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"

                android:id="@+id/tv_createdBy"
                android:textSize="@dimen/_14sp"
                android:fontFamily="@font/sarabun_regular"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"

                android:id="@+id/tv_lastUpdateOn"
                android:textSize="@dimen/_14sp"
                android:fontFamily="@font/sarabun_regular"
                android:textColor="@color/black" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"

                android:id="@+id/tv_lastUpdateBy"
                android:textSize="@dimen/_14sp"
                android:fontFamily="@font/sarabun_regular"
                android:textColor="@color/black" />


        </androidx.appcompat.widget.LinearLayoutCompat>



</LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>